[project]
name = "leverstone-me"
version = "0.1.0"
description = "Tom Leverstone's personal website"
authors = [
    {name = "Tom Leverstone", email = "nagasaki45@gmail.com"},
]
readme = "README.md"
package-mode = false
requires-python = "<4.0,>=3.12"
dependencies = [
    "pelican[markdown]<5.0.0,>=4.11",
    "pelican-yaml-metadata<3.0.0,>=2.1.2",
    "pelican-youtube<1.0.0,>=0.2.1",
    "pagefind[extended]>=1.3.0",
    "pelican-readtime>=0.2.1",
]
